# swarmhq

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.adk/: session.db
.github/workflows/: deploy.yml
deploy/cloudrun/: Dockerfile  README.md  main.py  requirements.txt
docs/: ci-cd.md  cloud-run-deployment.md  demo-github-seed.md  local-testing.md
scripts/: push_github_secrets.py  seed_demo.sh
swarm_hq_agent/: .env.example  agent.py  guardrails.py  state_tools.py
swarm_hq_agent/.adk/: session.db
swarm_hq_agent/evals/: eval.test.json  test_config.json
swarm_hq_agent/mcps/: github_mcp_toolset.py  mock_github_toolset.py
tests/: test_agent_eval.py
